--- a/src/Components/FaceRecognition/facerecognition.scss
+++ b/src/Components/FaceRecognition/facerecognition.scss
@@ -1,6 +1,6 @@
  .bounding-box {
     position: absolute;
-    box-shadow: 0 0 0 35x #149df2 inset;
+    box-shadow: 0 0 0 5px #149df2 inset;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
